--- a/index.html
+++ b/index.html
@@ -1,7 +1,257 @@
 <!DOCTYPE html>
-<html>
-<body>
-<h1>Hello World</h1>
-<p>I'm hosted with GitHub Pages.</p>
+<html lang="en">
+
+<head>
+
+    <meta charset="utf-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta name="description" content="">
+    <meta name="author" content="">
+
+    <title>RAMurray Profolio</title>
+
+    <!-- Bootstrap Core CSS -->
+    <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
+
+    <!-- Theme CSS -->
+    <link href="css/freelancer.css" rel="stylesheet">
+    <!--<link href="css/freelancer.min.css" rel="stylesheet">-->
+
+    <!-- Custom Fonts -->
+    <link href="vendor/font-awesome/css/font-awesome.min.css" rel="stylesheet" type="text/css">
+    <link href="https://fonts.googleapis.com/css?family=Montserrat:400,700" rel="stylesheet" type="text/css">
+    <link href="https://fonts.googleapis.com/css?family=Lato:400,700,400italic,700italic" rel="stylesheet" type="text/css">
+
+    <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
+    <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
+    <!--[if lt IE 9]>
+        <script src="https://oss.maxcdn.com/libs/html5shiv/3.7.0/html5shiv.js"></script>
+        <script src="https://oss.maxcdn.com/libs/respond.js/1.4.2/respond.min.js"></script>
+    <![endif]-->
+
+</head>
+
+<body id="page-top" class="index">
+
+    <!-- Navigation -->
+    <nav id="mainNav" class="navbar navbar-default navbar-fixed-top navbar-custom">
+        <div class="container">
+            <!-- Brand and toggle get grouped for better mobile display -->
+            <div class="navbar-header page-scroll">
+                <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1">
+                    <span class="sr-only">Toggle navigation</span> Menu <i class="fa fa-bars"></i>
+                </button>
+                <a class="navbar-brand" href="#page-top">R. Murray</a>
+            </div>
+
+            <!-- Collect the nav links, forms, and other content for toggling -->
+            <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
+                <ul class="nav navbar-nav navbar-right">
+                    <li class="hidden">
+                        <a href="#page-top"></a>
+                    </li>
+                    <li class="page-scroll">
+                        <a href="#portfolio">Portfolio</a>
+                    </li>
+                    <li class="page-scroll">
+                        <a href="#Contactbelow">Contact</a>
+                    </li>
+                </ul>
+            </div>
+            <!-- /.navbar-collapse -->
+        </div>
+        <!-- /.container-fluid -->
+    </nav>
+
+    <!-- Header -->
+    <header class="intro-header" style="background-image: url('img/portfolio/bgcode.jpg')">
+        <div class="container">
+            <div class="row">
+                <div class="col-lg-12">
+                    <img class="img-responsive" src="img/profileme.png" alt="">
+                    <div class="intro-text">
+                        <span class="name">Rashad Murray</span>
+                        <hr class="star-light">
+                        <span class="skills">Software Developer - .Net Developer - Web Developer - Full Statck</span>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </header>
+
+    <!-- Portfolio Section -->
+    <section id="portfolio">
+        <div class="container">
+            <div class="row">
+                <div class="col-lg-12 text-center">
+                    <h2>Side Projects</h2>
+                    <hr class="star-primary">
+                </div>
+            </div>
+            <div class="row">
+				<div class="col-sm-4 portfolio-item">
+					  <img src="img/portfolio/angular.png" class="img-responsive" alt="AngularJS Logo">
+                </div>
+                <div class="col-sm-8 portfolio-item">
+                    <h3> Angular 2 <small>Tour of Heroes</small></h3>
+                    <!--<h4><a href="https://plnkr.co/3uOrQS6hnKKGgGHqw2Ws">Live Demo (via Plunker)</a></h4>-->
+                    <ul class="list-unstyled">
+                        <li><a href="https://plnkr.co/3uOrQS6hnKKGgGHqw2Ws">Live Demo (via Plunker)</a></li>
+					    <li><a href="https://github.com/RAMurray/Angular2Heroes">GitHub Repository</a></li>
+					</ul>
+					<p> Created a Angular 2 framework application following tutorial provided with Angular 2's documentation.
+                         I'm in process of creating another Angular 2 application, which like the provided demo, is being developed locally 
+                         using Node.js and written in Typescript.
+                    </p>
+
+                </div>
+			</div>
+
+            <div class="row">
+                <div class="col-sm-8 portfolio-item">
+                    <h3> ASP.Net MVC <small>CS Employer</small></h3>
+                    <!--<h4><a href="https://plnkr.co/3uOrQS6hnKKGgGHqw2Ws">Live Demo (via Plunker)</a></h4>-->
+                    <ul class="list-unstyled">
+					    <li><a href="https://github.com/RAMurray/CSEmployerMVC">GitHub Repository</a></li>
+                        <li><a href="#portfolioModal1" data-toggle="modal">Image Gallery</a></li>
+					</ul>
+					<p>ASP.net MVC application I created which mimics job search and head hunting sites such as Indeed.com. Unfortunately, I not able to
+                        provide a web demo at this time due to the lack of a Microsoft Azure account. The application can only be ran using Visual Studios.
+                    </p>
+                </div>
+				<div class="col-sm-4 portfolio-item">
+					  <img src="img/portfolio/mvc.png" class="img-responsive" alt="Asp.net MVC Logo">
+                </div>
+			</div>
+            
+			<div class="row">
+				 <div class="col-sm-4 portfolio-item">
+					   <img src="img/portfolio/unity.png" class="img-responsive" alt="Unity Engine Logo">
+                </div>
+                <div class="col-sm-8 portfolio-item">
+                    <h3>Unity Game Engine <small>Astronaut vs Martains<small></h3>
+                    <ul class="list-unstyled">
+                        <li><a href="https://ramurray.github.io/Unity2d-Astronaut-vs-Martians/">Click Here to Play</a>
+                            <br>
+                            <small> - Requires Unity Web Player browser extention which can be <a href="https://unity3d.com/webplayer"> downloaded here.</a> </small>
+                        </li>
+                         <li><a href="https://github.com/RAMurray/Unity2d-Astronaut-vs-Martianss">GitHub Repository</a></li>
+					</ul>
+					<p> Created 2D web browser game in Unity Engine following a tutorial.  I'm also working on another game as a 
+                        hobby project.  The scripts I wrote for both games were written in C#, using Unity Engine's extensive 
+                        library.  All art and sound assests for "Astronaut vs Martains" was created and provided by <a href="https://brackeys.com/">Brackeys</a>.						
+					</p>
+                </div>
+            </div>
+        </div>
+    </section>
+
+
+<!-- Footer -->
+<footer class="text-center">
+    <div id="Contactbelow" class="footer-above">
+        <div class="container">
+            <div class="row">
+                <div class="col-lg-12 text-center">
+                    <h2>Contact Me</h2>
+                    <hr class="star-footer">
+                </div>
+            </div>
+            <div class="col-lg-12">
+                <ul class="list-unstyled">
+                    <li><strong>Email</strong>: <a href="mailto:#">rashad.murray@gmail.com</a></li>
+                    <li><a href="https://www.linkedin.com/in/rashad-murray-25420410b/" class="btn-social btn-outline"><i class="fa fa-fw fa-linkedin"></i></a></li>
+                </ul>
+            </div>
+        </div>
+    </div>
+    <div class="footer-below">
+        <div class="container">
+            <div class="row">
+                <div class="col-lg-12">
+                    Copyright &copy; IDK? 2017
+                </div>
+            </div>
+        </div>
+    </div>
+</footer>
+  <!-- Portfolio Modals -->
+    <div class="portfolio-modal modal fade" id="portfolioModal1" tabindex="-1" role="dialog" aria-hidden="true">
+        <div class="modal-content">
+            <div class="close-modal" data-dismiss="modal">
+                <div class="lr">
+                    <div class="rl">
+                    </div>
+                </div>
+            </div>
+            <div class="container">
+                <div class="row">
+                    <div class="col-lg-8 col-lg-offset-2">
+                        <div class="modal-body">
+                            <div id="carousel-example-generic" class="carousel slide" data-ride="carousel">
+                            <!-- Indicators -->
+                            <ol class="carousel-indicators">
+                                <li data-target="#carousel-example-generic" data-slide-to="0" class="active"></li>
+                                <li data-target="#carousel-example-generic" data-slide-to="1"></li>
+                                <li data-target="#carousel-example-generic" data-slide-to="2"></li>
+                            </ol>
+
+                            <!-- Wrapper for slides -->
+                            <div class="carousel-inner" role="listbox">
+                                <div class="item active">
+                                    <img src="img/mvcapp/mainmenu.jpg" alt="Main Menu image">
+                                </div>
+                                <div class="item">
+                                    <img src="img/mvcapp/applicants.jpg" alt="Applicant Search image">
+                                </div>
+                                <div class="item">
+                                    <img src="img/mvcapp/company.jpg" alt="Company portal image">
+                                </div>
+                            </div>
+
+                            <!-- Controls -->
+                            <a class="left carousel-control" href="#carousel-example-generic" role="button" data-slide="prev">
+                                <span class="glyphicon glyphicon-chevron-left" aria-hidden="true"></span>
+                                <span class="sr-only">Previous</span>
+                            </a>
+                            <a class="right carousel-control" href="#carousel-example-generic" role="button" data-slide="next">
+                                <span class="glyphicon glyphicon-chevron-right" aria-hidden="true"></span>
+                                <span class="sr-only">Next</span>
+                            </a>
+                            </div>
+                            <button type="button" class="btn btn-default" data-dismiss="modal"><i class="fa fa-times"></i> Close</button>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+    
+
+    <!-- Scroll to Top Button (Only visible on small and extra-small screen sizes) -->
+    <div class="scroll-top page-scroll hidden-sm hidden-xs hidden-lg hidden-md">
+        <a class="btn btn-primary" href="#page-top">
+            <i class="fa fa-chevron-up"></i>
+        </a>
+    </div>
+
+    <!-- jQuery -->
+    <script src="vendor/jquery/jquery.min.js"></script>
+
+    <!-- Bootstrap Core JavaScript -->
+    <script src="vendor/bootstrap/js/bootstrap.min.js"></script>
+
+    <!-- Plugin JavaScript -->
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-easing/1.3/jquery.easing.min.js"></script>
+
+    <!-- Contact Form JavaScript -->
+    <script src="js/jqBootstrapValidation.js"></script>
+    <script src="js/contact_me.js"></script>
+
+    <!-- Theme JavaScript -->
+    <script src="js/freelancer.min.js"></script>
+
 </body>
+
 </html>
