--- a/index.html
+++ b/index.html
@@ -65,13 +65,13 @@
     </nav>
 
     <!-- Header -->
-    <header class="intro-header" style="background-image: url('img/portfolio/bgcode.jpg')">
+    <header class="intro-header" style="">
         <div class="container">
             <div class="row">
                 <div class="col-lg-12">
                     <img class="img-responsive" src="img/profileme.png" alt="">
                     <div class="intro-text">
-                        <span class="name">Rashad Murray</span>
+                        <span class="name">R Murray</span>
                         <hr class="star-light">
                         <span class="skills">Software Developer - .Net Developer - Web Developer - Full Statck</span>
                     </div>
@@ -160,8 +160,8 @@
             </div>
             <div class="col-lg-12">
                 <ul class="list-unstyled">
-                    <li><strong>Email</strong>: <a href="mailto:#">rashad.murray@gmail.com</a></li>
-                    <li><a href="https://www.linkedin.com/in/rashad-murray-25420410b/" class="btn-social btn-outline"><i class="fa fa-fw fa-linkedin"></i></a></li>
+                    <li><strong>Email</strong>: <a href="mailto:#">see resume</a></li>
+                    <li><a href="#" class="btn-social btn-outline"><i class="fa fa-fw fa-linkedin"></i></a></li>
                 </ul>
             </div>
         </div>
