--- a/index.html
+++ b/index.html
@@ -1,67 +1,59 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
+	<meta charset="utf-8">
+	<meta http-equiv="X-UA-Compatible" content="IE=edge">
+	<meta name="viewport" content="width=device-width, initial-scale=1">
+	<meta name="description" content="">
+	<meta name="author" content="">
 
-    <meta charset="utf-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <meta name="description" content="">
-    <meta name="author" content="">
+	<title>RAMurray Profolio</title>
 
-    <title>RAMurray Profolio</title>
+	<!-- Bootstrap Core CSS -->
+	<!-- <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet"> -->
+	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css">
 
-    <!-- Bootstrap Core CSS -->
-    <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
+	<!-- Theme CSS -->
+	<link href="css/freelancer.css" rel="stylesheet">
 
-    <!-- Theme CSS -->
-    <link href="css/freelancer.css" rel="stylesheet">
-    <!--<link href="css/freelancer.min.css" rel="stylesheet">-->
+	<!-- Custom Fonts -->
+	<link href="vendor/font-awesome/css/font-awesome.min.css" rel="stylesheet" type="text/css">
+	<link href="https://fonts.googleapis.com/css?family=Montserrat:400,700" rel="stylesheet" type="text/css">
+	<link href="https://fonts.googleapis.com/css?family=Lato:400,700,400italic,700italic" rel="stylesheet" type="text/css">
 
-    <!-- Custom Fonts -->
-    <link href="vendor/font-awesome/css/font-awesome.min.css" rel="stylesheet" type="text/css">
-    <link href="https://fonts.googleapis.com/css?family=Montserrat:400,700" rel="stylesheet" type="text/css">
-    <link href="https://fonts.googleapis.com/css?family=Lato:400,700,400italic,700italic" rel="stylesheet" type="text/css">
-
-    <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
-    <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
-    <!--[if lt IE 9]>
-        <script src="https://oss.maxcdn.com/libs/html5shiv/3.7.0/html5shiv.js"></script>
-        <script src="https://oss.maxcdn.com/libs/respond.js/1.4.2/respond.min.js"></script>
-    <![endif]-->
-
+	<!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
+	<!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
+	<!--[if lt IE 9]>
+		<script src="https://oss.maxcdn.com/libs/html5shiv/3.7.0/html5shiv.js"></script>
+		<script src="https://oss.maxcdn.com/libs/respond.js/1.4.2/respond.min.js"></script>
+	<![endif]-->
 </head>
 
 <body id="page-top" class="index">
-
     <!-- Navigation -->
-    <nav id="mainNav" class="navbar navbar-default navbar-fixed-top navbar-custom">
-        <div class="container">
-            <!-- Brand and toggle get grouped for better mobile display -->
-            <div class="navbar-header page-scroll">
-                <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1">
-                    <span class="sr-only">Toggle navigation</span> Menu <i class="fa fa-bars"></i>
-                </button>
-                <a class="navbar-brand" href="#page-top">R. Murray</a>
-            </div>
+    <nav id="mainNav" class="navbar navbar-expand-lg navbar-custom">
+		<div class="container d-flex flex-column flex-md-row justify-content-between">
+			<a class="navbar-brand" href="#">R. Murray</a>
+			<!-- Brand and toggle get grouped for better mobile display -->
+			<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
+				<span class="navbar-toggler-icon"></span>
+			</button>
 
-            <!-- Collect the nav links, forms, and other content for toggling -->
-            <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
-                <ul class="nav navbar-nav navbar-right">
-                    <li class="hidden">
-                        <a href="#page-top"></a>
-                    </li>
-                    <li class="page-scroll">
-                        <a href="#portfolio">Portfolio</a>
-                    </li>
-                    <li class="page-scroll">
-                        <a href="#Contactbelow">Contact</a>
-                    </li>
-                </ul>
-            </div>
-            <!-- /.navbar-collapse -->
-        </div>
-        <!-- /.container-fluid -->
+			<!-- Collect the nav links, forms, and other content for toggling -->
+			<div class="collapse navbar-collapse" id="navbarNavDropdown">
+				<ul class="navbar-nav">
+					<li class="hidden">
+						<a href="#page-top"></a>
+					</li>
+					<li class="nav-item">
+						<a class="nav-link" href="#portfolio">Portfolio</a>
+					</li>
+					<li class="nav-item">
+						<a class="nav-link" href="#Contactbelow">Contact</a>
+					</li>
+				</ul>
+			</div>
+		</div>
     </nav>
 
     <!-- Header -->
@@ -69,9 +61,9 @@
         <div class="container">
             <div class="row">
                 <div class="col-lg-12">
-                    <img class="img-responsive" src="img/profileme.png" alt="">
+                    <img class="rounded" src="img/portfolio/Selfwfedora_eww.jpg" alt="picture of me">
                     <div class="intro-text">
-                        <span class="name">R Murray</span>
+                        <span class="name">Rashad Murray</span>
                         <hr class="star-light">
                         <span class="skills">Software Developer - .Net Developer - Web Developer - Full Statck</span>
                     </div>
@@ -90,41 +82,35 @@
                 </div>
             </div>
             <div class="row">
-				<div class="col-sm-4 portfolio-item">
-					  <img src="img/portfolio/angular.png" class="img-responsive" alt="AngularJS Logo">
+				<div class="col-sm-3 portfolio-item">
+					  <img src="img/portfolio/angular.png" class="img-responsive align-top" alt="AngularJS Logo">
                 </div>
-                <div class="col-sm-8 portfolio-item">
-                    <h3> Angular 2 <small>Tour of Heroes</small></h3>
-                    <!--<h4><a href="https://plnkr.co/3uOrQS6hnKKGgGHqw2Ws">Live Demo (via Plunker)</a></h4>-->
+                <div class="col-sm-9 portfolio-item">
+                    <h3> Angular 4</h3>
                     <ul class="list-unstyled">
-                        <li><a href="https://plnkr.co/3uOrQS6hnKKGgGHqw2Ws">Live Demo (via Plunker)</a></li>
-					    <li><a href="https://github.com/RAMurray/Angular2Heroes">GitHub Repository</a></li>
+                        <li>Tour of Heroes <small><a href="https://ramurray.github.io/ng-recipe-book/">Repository</a></small></li>
+					    <li>Recipe Book <small><a href="https://github.com/RAMurray/ng-recipe-book">Repository</a> | <a href=" https://ramurray.github.io/ng-recipe-book/index.html">Demo</a></small></li>
 					</ul>
-					<p> Created a Angular 2 framework application following tutorial provided with Angular 2's documentation.
-                         I'm in process of creating another Angular 2 application, which like the provided demo, is being developed locally 
-                         using Node.js and written in Typescript.
+					<p> Created  a couple small single page applications using Angular 2 & 4 framework application. Both applications were built using Typescript and was debugged using Node JS.
                     </p>
 
                 </div>
 			</div>
-
             <div class="row">
                 <div class="col-sm-8 portfolio-item">
-                    <h3> ASP.Net MVC <small>CS Employer</small></h3>
-                    <!--<h4><a href="https://plnkr.co/3uOrQS6hnKKGgGHqw2Ws">Live Demo (via Plunker)</a></h4>-->
+                    <h3>.Net MVC</h3>
                     <ul class="list-unstyled">
-					    <li><a href="https://github.com/RAMurray/CSEmployerMVC">GitHub Repository</a></li>
-                        <li><a href="#portfolioModal1" data-toggle="modal">Image Gallery</a></li>
+					    <li>CS Employer <small><a href="https://github.com/RAMurray/CSEmployerMVC">Repository</a> | <a href="#portfolioModal1" data-toggle="modal">Images</a></small></li>
+                        <li>Vehicle Tracker <small><a href="https://github.com/RAMurray/VehicleTrackerMVC">Repository</a></small>  </li>
 					</ul>
-					<p>ASP.net MVC application I created which mimics job search and head hunting sites such as Indeed.com. Unfortunately, I not able to
-                        provide a web demo at this time due to the lack of a Microsoft Azure account. The application can only be ran using Visual Studios.
+					<p>Created small .Net MVC applications that use Entity Framework 6. Unfortunately, I not able to provide a web demo at this time due to the lack of a Microsoft Azure account.
+					The application can only be ran using Visual Studios.
                     </p>
                 </div>
 				<div class="col-sm-4 portfolio-item">
 					  <img src="img/portfolio/mvc.png" class="img-responsive" alt="Asp.net MVC Logo">
                 </div>
 			</div>
-            
 			<div class="row">
 				 <div class="col-sm-4 portfolio-item">
 					   <img src="img/portfolio/unity.png" class="img-responsive" alt="Unity Engine Logo">
@@ -133,8 +119,6 @@
                     <h3>Unity Game Engine <small>Astronaut vs Martains<small></h3>
                     <ul class="list-unstyled">
                         <li><a href="https://ramurray.github.io/Unity2d-Astronaut-vs-Martians/">Click Here to Play</a>
-                            <br>
-                            <small> - Requires Unity Web Player browser extention which can be <a href="https://unity3d.com/webplayer"> downloaded here.</a> </small>
                         </li>
                          <li><a href="https://github.com/RAMurray/Unity2d-Astronaut-vs-Martianss">GitHub Repository</a></li>
 					</ul>
@@ -146,37 +130,33 @@
             </div>
         </div>
     </section>
-
-
-<!-- Footer -->
-<footer class="text-center">
-    <div id="Contactbelow" class="footer-above">
-        <div class="container">
-            <div class="row">
-                <div class="col-lg-12 text-center">
-                    <h2>Contact Me</h2>
-                    <hr class="star-footer">
-                </div>
-            </div>
-            <div class="col-lg-12">
-                <ul class="list-unstyled">
-                    <li><strong>Email</strong>: <a href="mailto:#">see resume</a></li>
-                    <li><a href="#" class="btn-social btn-outline"><i class="fa fa-fw fa-linkedin"></i></a></li>
-                </ul>
-            </div>
-        </div>
-    </div>
-    <div class="footer-below">
-        <div class="container">
-            <div class="row">
-                <div class="col-lg-12">
-                    Copyright &copy; IDK? 2017
-                </div>
-            </div>
-        </div>
-    </div>
-</footer>
-  <!-- Portfolio Modals -->
+	<!-- Footer -->
+	<footer class="text-center">
+		<div id="Contactbelow" class="footer-below">
+			<div class="container">
+				<div class="row">
+					<div class="col-lg-12 text-center">
+						<h2>Contact Me</h2>
+						<hr class="star-footer">
+					</div>
+				</div>
+				<div class="row">
+					<div class="col-lg-12">
+						<ul class="list-unstyled">
+							<li><strong>Email</strong>: <a href="mailto:#">see resume</a></li>
+							<li><a href="#" class="btn-social btn-outline"><i class="fa fa-fw fa-linkedin"></i></a></li>
+						</ul>
+					</div>
+				</div>
+				<div class="row">
+					<div class="col-lg-12">
+						Copyright &copy; 2018
+					</div>
+				</div>
+			</div>
+		</div>
+	</footer>
+	<!-- Portfolio Modals -->
     <div class="portfolio-modal modal fade" id="portfolioModal1" tabindex="-1" role="dialog" aria-hidden="true">
         <div class="modal-content">
             <div class="close-modal" data-dismiss="modal">
@@ -253,5 +233,4 @@
     <script src="js/freelancer.min.js"></script>
 
 </body>
-
 </html>
