--- a/index.html
+++ b/index.html
@@ -12,7 +12,6 @@
 	<!-- Bootstrap Core CSS -->
 	<!-- <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet"> -->
 	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css">
-
 	<!-- Theme CSS -->
 	<link href="css/freelancer.css" rel="stylesheet">
 
@@ -113,7 +112,12 @@
 			</div>
 			<div class="row">
 				 <div class="col-sm-4 portfolio-item">
-					   <img src="img/portfolio/unity.png" class="img-responsive" alt="Unity Engine Logo">
+				   <!-- <img src="img/portfolio/unity.png" class="img-responsive" alt="Unity Engine Logo"> -->
+				   <div class="video">
+					<video width="320" height="250" class="Astro" loop preload="none" poster="img/portfolio/unity.png">
+					  <source src="img/videos/AstroVsMartians.mp4" type="video/mp4">
+					</video>
+				   </div>
                 </div>
                 <div class="col-sm-8 portfolio-item">
                     <h3>Unity Game Engine <small>Astronaut vs Martains<small></h3>
@@ -230,7 +234,7 @@
     <script src="js/contact_me.js"></script>
 
     <!-- Theme JavaScript -->
-    <script src="js/freelancer.min.js"></script>
+    <script src="js/freelancer.js"></script>
 
 </body>
 </html>
