--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
     <!-- Navigation -->
     <nav id="mainNav" class="navbar navbar-expand-lg navbar-custom">
 		<div class="container d-flex flex-column flex-md-row justify-content-between">
-			<a class="navbar-brand" href="#">R. Murray</a>
+			<a class="navbar-brand" href="#">Rashad Murray</a>
 			<!-- Brand and toggle get grouped for better mobile display -->
 			<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
 				<span class="navbar-toggler-icon"></span>
@@ -60,11 +60,11 @@
         <div class="container">
             <div class="row">
                 <div class="col-lg-12">
-                    <img class="rounded" src="img/portfolio/Selfwfedora_eww.jpg" alt="picture of me">
+                    <img class="rounded" src="img/portfolio/Headshot.jpg" style="max-width: 50%; height: auto" alt="picture of me">
                     <div class="intro-text">
                         <span class="name">Rashad Murray</span>
                         <hr class="star-light">
-                        <span class="skills">Software Developer - .Net Developer - Web Developer - Full Statck</span>
+                        <span class="skills">Software Developer - Full Stack - .Net Developer - Web Design</span>
                     </div>
                 </div>
             </div>
@@ -74,6 +74,46 @@
     <!-- Portfolio Section -->
     <section id="portfolio">
         <div class="container">
+			<div class="row">
+                <div class="col-lg-12 text-center">
+                    <h2>Proficiency</h2>
+					<h4>Languages and Frameworks</h4>
+                    <hr class="star-primary">
+                </div>
+            </div>
+			<div class="row">
+				<div class="col-lg-6">
+					<div class="progress">
+						<div class="progress-bar progress-bar-striped" role="progressbar" style="width: 90%" aria-valuenow="10" aria-valuemin="0" aria-valuemax="100">
+						</div>
+					</div>
+					<p>
+						C#, SQL, dotNet, HTMl5, CSS3, Javascript, JQuery
+						<br />
+						SSRS (SQL Server Reporting Services).
+					</p>
+				</div>
+				<div class="col-lg-6">
+					<div class="progress">
+						<div class="progress-bar progress-bar-striped bg-warning" role="progressbar" style="width: 60%" aria-valuenow="10" aria-valuemin="0" aria-valuemax="100">
+						</div>
+					</div>
+					<p>
+						REST API, Angular (versions 2 and later), MVC, Typescript.
+					</p>
+				</div>
+			</div>
+			<div class="row">
+				<div class="col-lg-6">
+					<div class="progress">
+						<div class="progress-bar progress-bar-striped bg-success" role="progressbar" style="width: 30%" aria-valuenow="10" aria-valuemin="0" aria-valuemax="100">
+						</div>
+					</div>
+					<p>
+						C++, Coldfusion, Node.js.
+					</p>
+				</div>
+			</div>
             <div class="row">
                 <div class="col-lg-12 text-center">
                     <h2>Side Projects</h2>
@@ -85,14 +125,18 @@
 					  <img src="img/portfolio/angular.png" class="img-responsive align-top" alt="AngularJS Logo">
                 </div>
                 <div class="col-sm-9 portfolio-item">
-                    <h3> Angular 4</h3>
+                    <h3>Angular</h3>
                     <ul class="list-unstyled">
-                        <li>Tour of Heroes <small><a href="https://ramurray.github.io/ng-recipe-book/">Repository</a></small></li>
-					    <li>Recipe Book <small><a href="https://github.com/RAMurray/ng-recipe-book">Repository</a> | <a href=" https://ramurray.github.io/ng-recipe-book/index.html">Demo</a></small></li>
+                        <li>Bike Rental Shop <small> <a href="https://ramurray.github.io/BikeRental-App/">Live Demo</a> | <a href="https://github.com/RAMurray/BikeRental-App">GitHub Repository</a></small></small></li>
 					</ul>
-					<p> Created  a couple small single page applications using Angular 2 & 4 framework application. Both applications were built using Typescript and was debugged using Node JS.
+					<p> 
+						The "Bike Rental Application" was created using later version of Angular (4 and up). The application is an inventory management tool for a fictional bike shop that lets users:
+							<ul>
+								<li>Add, Edit, and Delete bicyles from inventory.</li>
+								<li>Rent out bicylces to customers.</li>
+								<li>View the rental history of bicyles in inventory.</li>
+							</ul>
                     </p>
-
                 </div>
 			</div>
             <div class="row">
@@ -100,9 +144,9 @@
                     <h3>.Net MVC</h3>
                     <ul class="list-unstyled">
 					    <li>CS Employer <small><a href="https://github.com/RAMurray/CSEmployerMVC">Repository</a> | <a href="#portfolioModal1" data-toggle="modal">Images</a></small></li>
-                        <li>Vehicle Tracker <small><a href="https://github.com/RAMurray/VehicleTrackerMVC">Repository</a></small>  </li>
+                        <li>Vehicle Tracker <small><a href="https://github.com/RAMurray/VehicleTrackerMVC">Repository</a></small></li>
 					</ul>
-					<p>Created small .Net MVC applications that use Entity Framework 6. Unfortunately, I not able to provide a web demo at this time due to the lack of a Microsoft Azure account.
+					<p>Created small MVC applications that use Entity Framework 6. Unfortunately, I not able to provide a web demo at this time due to the lack of a Microsoft Azure account.
 					The application can only be ran using Visual Studios.
                     </p>
                 </div>
@@ -120,11 +164,9 @@
 				   </div>
                 </div>
                 <div class="col-sm-8 portfolio-item">
-                    <h3>Unity Game Engine <small>Astronaut vs Martains<small></h3>
+                    <h3>Unity Game Engine</h3>
                     <ul class="list-unstyled">
-                        <li><a href="https://ramurray.github.io/Unity2d-Astronaut-vs-Martians/">Click Here to Play</a>
-                        </li>
-                         <li><a href="https://github.com/RAMurray/Unity2d-Astronaut-vs-Martianss">GitHub Repository</a></li>
+					 <li>Astronaut vs Martains <small><a href="https://ramurray.github.io/Unity2d-Astronaut-vs-Martians/">Click Here to Play</a> | <a href="https://github.com/RAMurray/Unity2d-Astronaut-vs-Martianss">GitHub Repository</a></small></small></li>
 					</ul>
 					<p> Created 2D web browser game in Unity Engine following a tutorial.  I'm also working on another game as a 
                         hobby project.  The scripts I wrote for both games were written in C#, using Unity Engine's extensive 
@@ -154,7 +196,7 @@
 				</div>
 				<div class="row">
 					<div class="col-lg-12">
-						Copyright &copy; 2018
+						Copyright &copy; 2020
 					</div>
 				</div>
 			</div>
